testsuite/tests/rename/should_fail/T17593.hs
{-# LANGUAGE StandaloneKindSignatures #-}
{-# LANGUAGE TypeOperators #-}
module T17593 where

(<+>) :: Int
data (<+>)

type MkT :: T
data T = MkT
